PythonToJava/PythonToJavaParser.py
# Generated from PythonToJava.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonToJavaParser ( Parser ):

    grammarFileName = "PythonToJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'return'", "'print'", "'if'", 
                     "'else'", "'for'", "'in'", "':'", "'('", "')'", "'{'", 
                     "'}'", "','", "'='", "'+'", "'-'", "'/'", "'*'" ]

    symbolicNames = [ "<INVALID>", "DEF", "RETURN", "PRINT", "IF", "ELSE", 
                      "FOR", "IN", "COLON", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "COMMA", "ASSIGN", "PLUS", "MINUS", "DIV", 
                      "MUL", "ID", "NUMBER", "STRING", "NEWLINE", "WS", 
                      "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_function = 2
    RULE_assignment = 3
    RULE_printStmt = 4
    RULE_returnStmt = 5
    RULE_functionCall = 6
    RULE_parameters = 7
    RULE_arguments = 8
    RULE_expression = 9
    RULE_atom = 10
    RULE_op = 11

    ruleNames =  [ "program", "statement", "function", "assignment", "printStmt", 
                   "returnStmt", "functionCall", "parameters", "arguments", 
                   "expression", "atom", "op" ]

    EOF = Token.EOF
    DEF=1
    RETURN=2
    PRINT=3
    IF=4
    ELSE=5
    FOR=6
    IN=7
    COLON=8
    LPAREN=9
    RPAREN=10
    LBRACE=11
    RBRACE=12
    COMMA=13
    ASSIGN=14
    PLUS=15
    MINUS=16
    DIV=17
    MUL=18
    ID=19
    NUMBER=20
    STRING=21
    NEWLINE=22
    WS=23
    INDENT=24
    DEDENT=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonToJavaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.StatementContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.FunctionContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.FunctionContext,i)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonToJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 524302) != 0):
                self.state = 26
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3, 19]:
                    self.state = 24
                    self.statement()
                    pass
                elif token in [1]:
                    self.state = 25
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(PythonToJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PythonToJavaParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(PythonToJavaParser.PrintStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(PythonToJavaParser.ReturnStmtContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(PythonToJavaParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PythonToJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.printStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.returnStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonToJavaParser.DEF, 0)

        def ID(self):
            return self.getToken(PythonToJavaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PythonToJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonToJavaParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(PythonToJavaParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(PythonToJavaParser.DEDENT, 0)

        def parameters(self):
            return self.getTypedRuleContext(PythonToJavaParser.ParametersContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.StatementContext,i)


        def returnStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.ReturnStmtContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.ReturnStmtContext,i)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = PythonToJavaParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(PythonToJavaParser.DEF)
            self.state = 40
            self.match(PythonToJavaParser.ID)
            self.state = 41
            self.match(PythonToJavaParser.LPAREN)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 42
                self.parameters()


            self.state = 45
            self.match(PythonToJavaParser.RPAREN)
            self.state = 46
            self.match(PythonToJavaParser.COLON)
            self.state = 47
            self.match(PythonToJavaParser.NEWLINE)
            self.state = 48
            self.match(PythonToJavaParser.INDENT)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 51
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 49
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 50
                    self.returnStmt()
                    pass


                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 524300) != 0)):
                    break

            self.state = 55
            self.match(PythonToJavaParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonToJavaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PythonToJavaParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonToJavaParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(PythonToJavaParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PythonToJavaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(PythonToJavaParser.ID)
            self.state = 58
            self.match(PythonToJavaParser.ASSIGN)
            self.state = 59
            self.expression()
            self.state = 60
            self.match(PythonToJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonToJavaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonToJavaParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def NEWLINE(self):
            return self.getToken(PythonToJavaParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = PythonToJavaParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PythonToJavaParser.PRINT)
            self.state = 63
            self.match(PythonToJavaParser.LPAREN)
            self.state = 64
            self.expression()
            self.state = 65
            self.match(PythonToJavaParser.RPAREN)
            self.state = 66
            self.match(PythonToJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonToJavaParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonToJavaParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(PythonToJavaParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = PythonToJavaParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(PythonToJavaParser.RETURN)
            self.state = 69
            self.expression()
            self.state = 70
            self.match(PythonToJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonToJavaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(PythonToJavaParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = PythonToJavaParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(PythonToJavaParser.ID)
            self.state = 73
            self.match(PythonToJavaParser.LPAREN)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3670016) != 0):
                self.state = 74
                self.arguments()


            self.state = 77
            self.match(PythonToJavaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonToJavaParser.ID)
            else:
                return self.getToken(PythonToJavaParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonToJavaParser.COMMA)
            else:
                return self.getToken(PythonToJavaParser.COMMA, i)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = PythonToJavaParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PythonToJavaParser.ID)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 80
                self.match(PythonToJavaParser.COMMA)
                self.state = 81
                self.match(PythonToJavaParser.ID)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonToJavaParser.COMMA)
            else:
                return self.getToken(PythonToJavaParser.COMMA, i)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = PythonToJavaParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expression()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 88
                self.match(PythonToJavaParser.COMMA)
                self.state = 89
                self.expression()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.AtomContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.AtomContext,i)


        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.OpContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.OpContext,i)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = PythonToJavaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.atom()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0):
                self.state = 96
                self.op()
                self.state = 97
                self.atom()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonToJavaParser.ID, 0)

        def NUMBER(self):
            return self.getToken(PythonToJavaParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(PythonToJavaParser.STRING, 0)

        def functionCall(self):
            return self.getTypedRuleContext(PythonToJavaParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = PythonToJavaParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atom)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(PythonToJavaParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(PythonToJavaParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(PythonToJavaParser.STRING)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(PythonToJavaParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PythonToJavaParser.MINUS, 0)

        def MUL(self):
            return self.getToken(PythonToJavaParser.MUL, 0)

        def DIV(self):
            return self.getToken(PythonToJavaParser.DIV, 0)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)




    def op(self):

        localctx = PythonToJavaParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





